[gd_scene load_steps=42 format=2]

[ext_resource path="res://FishingScene/Ponds/Pond.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/arco/ARCO for OSX.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fishing Scene/UI elements/hook_button_2.0.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fishing Scene/UI elements/coin_ui.png" type="Texture" id=4]
[ext_resource path="res://Assets/Shop/BaseUI/shop_base_ui-01-01.png" type="Texture" id=5]
[ext_resource path="res://Game/Shop/RoundNumber.gd" type="Script" id=6]
[ext_resource path="res://Resources/Custom Resources/Item Related/AlphaItemPool.tres" type="Resource" id=7]
[ext_resource path="res://Game/Shop/ItemName.gd" type="Script" id=8]
[ext_resource path="res://Game/Shop/BuySellButton.gd" type="Script" id=9]
[ext_resource path="res://Assets/Shop/BaseUI/shop_buy-01.png" type="Texture" id=10]
[ext_resource path="res://Game/Shop/ItemCost.gd" type="Script" id=11]
[ext_resource path="res://Game/Shop/ItemDescription.gd" type="Script" id=12]
[ext_resource path="res://Game/Shop/DescriptionBox.gd" type="Script" id=13]
[ext_resource path="res://Assets/Shop/BaseUI/speech_bubble_edge-01.png" type="Texture" id=14]
[ext_resource path="res://Game/Shop/SpeechBubbleEdges.gd" type="Script" id=15]
[ext_resource path="res://Assets/Shop/BaseUI/shop_sell-01.png" type="Texture" id=16]
[ext_resource path="res://Assets/Shop/BaseUI/speech_base_large-01.png" type="Texture" id=17]
[ext_resource path="res://Game/Shop/ItemsSold.gd" type="Script" id=18]
[ext_resource path="res://Assets/Shop/BaseUI/inventory.png" type="Texture" id=19]
[ext_resource path="res://Game/Shop/BackpackPlaceHolder.tres" type="Texture" id=20]
[ext_resource path="res://Game/Shop/ItemSlots.gd" type="Script" id=21]
[ext_resource path="res://Game/Shop/NewShop/Hooks.gd" type="Script" id=22]
[ext_resource path="res://Game/Shop/NewShop/Gold.gd" type="Script" id=23]
[ext_resource path="res://Shaders/CircleScreenTransition/CircleScreenTransition.tscn" type="PackedScene" id=24]
[ext_resource path="res://Game/Shop/NewShop/UI.gd" type="Script" id=25]
[ext_resource path="res://Resources/Custom Resources/CurrentBobberStats.tres" type="Resource" id=26]
[ext_resource path="res://Resources/Custom Resources/CurrentBackPack.tres" type="Resource" id=27]
[ext_resource path="res://Game/Shop/NewShop/ItemRarity.gd" type="Script" id=28]
[ext_resource path="res://Game/Shop/NewShop/ItemExp.gd" type="Script" id=29]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 2 )

[node name="Shop" type="Node"]

[node name="Pond" parent="." instance=ExtResource( 1 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}
bobber_stats = ExtResource( 26 )
backpack = ExtResource( 27 )

[node name="UpperLeftCorner" type="VBoxContainer" parent="UI"]
margin_left = 18.0
margin_top = 28.0
margin_right = 168.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hooks" type="TextureRect" parent="UI/UpperLeftCorner"]
margin_right = 150.0
margin_bottom = 88.0
rect_min_size = Vector2( 150, 88 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/UpperLeftCorner/Hooks"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -14.0
margin_right = -12.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "9/9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold" type="TextureRect" parent="UI/UpperLeftCorner"]
margin_top = 92.0
margin_right = 150.0
margin_bottom = 180.0
rect_min_size = Vector2( 150, 88 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/UpperLeftCorner/Gold"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -83.0
margin_top = -23.0
margin_right = -19.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundNumber" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.5
margin_top = 25.0
margin_right = 125.5
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 0.780392 )
text = "Round 99 complete"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopPanel" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -337.0
margin_right = 450.0
margin_bottom = 311.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionBox" type="NinePatchRect" parent="UI/ShopPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -396.0
margin_top = 8.0
margin_right = 396.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( 979, 182 )
texture = ExtResource( 17 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
item_pool = ExtResource( 7 )

[node name="ItemName" type="Label" parent="UI/ShopPanel/DescriptionBox"]
margin_left = 35.0
margin_top = 20.0
margin_right = 237.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Item Name"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="Label" parent="UI/ShopPanel/DescriptionBox"]
margin_left = 36.0
margin_top = 60.0
margin_right = 604.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Item Description"
autowrap = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSide" type="VBoxContainer" parent="UI/ShopPanel/DescriptionBox"]
margin_left = 652.0
margin_top = 20.0
margin_right = 761.0
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemCost" type="Label" parent="UI/ShopPanel/DescriptionBox/RightSide"]
margin_right = 109.0
margin_bottom = 34.0
rect_min_size = Vector2( 105, 34 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cost:"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemRarity" type="Label" parent="UI/ShopPanel/DescriptionBox/RightSide"]
margin_top = 38.0
margin_right = 109.0
margin_bottom = 77.0
rect_min_size = Vector2( 109, 39 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Rarity:
Super Rare"
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemExp" type="Label" parent="UI/ShopPanel/DescriptionBox/RightSide"]
margin_top = 81.0
margin_right = 109.0
margin_bottom = 99.0
rect_min_size = Vector2( 74, 18 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Exp: 0/6"
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuySellButton" type="TextureButton" parent="UI/ShopPanel/DescriptionBox"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1041.0
margin_top = -239.0
margin_right = 857.0
margin_bottom = 545.0
rect_scale = Vector2( 0.064, 0.064 )
rect_pivot_offset = Vector2( 949, 392 )
texture_normal = ExtResource( 10 )
stretch_mode = 5
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
BuyButtonTexture = ExtResource( 10 )
SellButtonTexture = ExtResource( 16 )

[node name="Tween" type="Tween" parent="UI/ShopPanel/DescriptionBox/BuySellButton"]

[node name="SpeechBubbleEdges" type="Control" parent="UI/ShopPanel/DescriptionBox"]
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechBubbleEdgeItemSold1" type="TextureRect" parent="UI/ShopPanel/DescriptionBox/SpeechBubbleEdges"]
margin_left = 92.0
margin_top = -15.0
margin_right = 2140.0
margin_bottom = 2033.0
rect_scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 14 )
stretch_mode = 6
flip_v = true

[node name="SpeechBubbleEdgeItemSold2" type="TextureRect" parent="UI/ShopPanel/DescriptionBox/SpeechBubbleEdges"]
margin_left = 380.0
margin_top = -15.0
margin_right = 2428.0
margin_bottom = 2033.0
rect_scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 14 )
stretch_mode = 6
flip_v = true

[node name="SpeechBubbleEdgeItemSold3" type="TextureRect" parent="UI/ShopPanel/DescriptionBox/SpeechBubbleEdges"]
margin_left = 668.0
margin_top = -15.0
margin_right = 2716.0
margin_bottom = 2033.0
rect_scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 14 )
stretch_mode = 6
flip_v = true

[node name="SpeechBubbleEdgeBackpack1" type="TextureRect" parent="UI/ShopPanel/DescriptionBox/SpeechBubbleEdges"]
margin_left = 275.0
margin_top = 171.0
margin_right = 2323.0
margin_bottom = 2219.0
rect_scale = Vector2( 0.023, 0.023 )
texture = ExtResource( 14 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechBubbleEdgeBackpack2" type="TextureRect" parent="UI/ShopPanel/DescriptionBox/SpeechBubbleEdges"]
margin_left = 383.0
margin_top = 171.0
margin_right = 2431.0
margin_bottom = 2219.0
rect_scale = Vector2( 0.023, 0.023 )
texture = ExtResource( 14 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechBubbleEdgeBackpack3" type="TextureRect" parent="UI/ShopPanel/DescriptionBox/SpeechBubbleEdges"]
margin_left = 491.0
margin_top = 171.0
margin_right = 2539.0
margin_bottom = 2219.0
rect_scale = Vector2( 0.023, 0.023 )
texture = ExtResource( 14 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechBubbleEdgeBackpack4" type="TextureRect" parent="UI/ShopPanel/DescriptionBox/SpeechBubbleEdges"]
margin_left = 599.0
margin_top = 171.0
margin_right = 2647.0
margin_bottom = 2219.0
rect_scale = Vector2( 0.023, 0.023 )
texture = ExtResource( 14 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechBubbleEdgeBackpack5" type="TextureRect" parent="UI/ShopPanel/DescriptionBox/SpeechBubbleEdges"]
margin_left = 707.0
margin_top = 171.0
margin_right = 2755.0
margin_bottom = 2219.0
rect_scale = Vector2( 0.023, 0.023 )
texture = ExtResource( 14 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsSold" type="HBoxContainer" parent="UI/ShopPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -368.0
margin_top = -202.0
margin_right = 368.0
margin_bottom = -2.0
custom_constants/separation = 50
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}
item_pool = ExtResource( 7 )

[node name="Button" type="Button" parent="UI/ShopPanel/ItemsSold"]
margin_right = 212.0
margin_bottom = 200.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
enabled_focus_mode = 0
flat = true
clip_text = true

[node name="Button2" type="Button" parent="UI/ShopPanel/ItemsSold"]
margin_left = 262.0
margin_right = 474.0
margin_bottom = 200.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
enabled_focus_mode = 0
flat = true

[node name="Button3" type="Button" parent="UI/ShopPanel/ItemsSold"]
margin_left = 524.0
margin_right = 736.0
margin_bottom = 200.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
flat = true

[node name="BackpackSprite" type="TextureRect" parent="UI/ShopPanel"]
margin_left = 50.0
margin_top = 521.0
margin_right = 290.0
margin_bottom = 659.0
rect_min_size = Vector2( 240, 138 )
texture = ExtResource( 19 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlots" type="HBoxContainer" parent="UI/ShopPanel"]
margin_left = 314.0
margin_top = 553.0
margin_right = 814.0
margin_bottom = 625.0
size_flags_horizontal = 3
custom_constants/separation = 25
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}
occupied_item_icon = ExtResource( 20 )

[node name="Button" type="Button" parent="UI/ShopPanel/ItemSlots"]
margin_right = 80.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 72 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
expand_icon = true

[node name="Quantity" type="Label" parent="UI/ShopPanel/ItemSlots/Button"]
margin_left = 52.0
margin_top = -8.0
margin_right = 82.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="UI/ShopPanel/ItemSlots"]
margin_left = 105.0
margin_right = 185.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 72 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
expand_icon = true

[node name="Quantity" type="Label" parent="UI/ShopPanel/ItemSlots/Button2"]
margin_left = 52.0
margin_top = -8.0
margin_right = 82.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button3" type="Button" parent="UI/ShopPanel/ItemSlots"]
margin_left = 210.0
margin_right = 290.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 72 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
expand_icon = true

[node name="Quantity" type="Label" parent="UI/ShopPanel/ItemSlots/Button3"]
margin_left = 52.0
margin_top = -8.0
margin_right = 82.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button4" type="Button" parent="UI/ShopPanel/ItemSlots"]
margin_left = 315.0
margin_right = 395.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 72 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
expand_icon = true

[node name="Quantity" type="Label" parent="UI/ShopPanel/ItemSlots/Button4"]
margin_left = 52.0
margin_top = -8.0
margin_right = 82.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button5" type="Button" parent="UI/ShopPanel/ItemSlots"]
margin_left = 420.0
margin_right = 500.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 72 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
expand_icon = true

[node name="Quantity" type="Label" parent="UI/ShopPanel/ItemSlots/Button5"]
margin_left = 52.0
margin_top = -8.0
margin_right = 82.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NextWave" type="Button" parent="UI"]
margin_left = 1112.0
margin_top = 648.0
margin_right = 1272.0
margin_bottom = 704.0
custom_fonts/font = SubResource( 11 )
text = "Next wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenTransition" parent="UI" instance=ExtResource( 24 )]
visible = false

[connection signal="button_down" from="UI/ShopPanel/DescriptionBox/BuySellButton" to="UI/ShopPanel/DescriptionBox/BuySellButton" method="_on_BuySellButton_button_down"]
[connection signal="button_up" from="UI/ShopPanel/DescriptionBox/BuySellButton" to="UI/ShopPanel/DescriptionBox/BuySellButton" method="_on_BuySellButton_button_up"]
[connection signal="tween_all_completed" from="UI/ShopPanel/DescriptionBox/BuySellButton/Tween" to="UI/ShopPanel/DescriptionBox/BuySellButton" method="_on_Tween_tween_all_completed"]
